Temporary fix for overlapping biography and photo

--- a/src/main.css
+++ b/src/main.css
@@ -179,7 +179,7 @@ a {
 #bio-block {
     top: 100px;
     width: 600px;
-    right: 150px;
+    right: 0px;
     background-color: Black;
 }
 #bio {
